# eidos

./: Cargo.toml
src/: cli.rs  config.rs  eidos.rs  llm.rs  main.rs  note.rs  runner.rs
src/llm/: create.rs  fetch.rs  mod.rs
