[package]
name = "eidos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
futures = "0.3.32"
reqwest = "0.13.4"
rig-core = "0.38.2"
rustyline = "18.0.1"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
